# mobile_robot_ws

./: .gitignore  README.md  Ui_robot_test3.py
src/: crowdnav.world
src/Python-RVO2/src/: rvo2.cpp
src/elevator/: package.xml
src/gazebo_sfm_plugin-galactic/launch/: launch_collision_box.launch.py  launch_gpu_sim.launch.py
src/gazebo_sfm_plugin-galactic/src/: PedestrianSFMPlugin.cpp
src/gazebo_sfm_plugin-galactic/worlds/: Untitled Document 1  crowdnav.world  crowdnavs.world  empty_file.world  small_house.world  test.world
src/goal_predictor/goal_predictor/: goal_predictor.py
src/human_data_buffer/human_data_buffer/: data_buffer.py  humanKF-changed.py  human_KF_vel.py  human_data_extracter.py  humanbuffer_changed.py  test_data_pub.py
src/object_tracker/: package.xml  setup.py
src/object_tracker/object_tracker/: button_inference_node.py  inference_node.py  yolo_test.py  yolo_test_trt.py
src/preffered_velocity_prediction/preffered_velocity_prediction/: preffered_velocity.py
src/smrr_controller/: package.xml
src/smrr_controller/config/: arm_controller.yaml
src/smrr_crowdnav/: setup.py
src/smrr_crowdnav/smrr_crowdnav/: ControlNode_Robot.py  MPC_robot.py  MPC_robot_recovery.py  NewMPCReal.py  NewMPCReal_SLAM.py  Readme.md  (+31 more)
src/smrr_description/: package.xml
src/smrr_gui/: setup.py
src/smrr_interfaces/: CMakeLists.txt  package.xml
src/smrr_interfaces/action/: NavigateToGoal.action
src/smrr_interfaces/msg/: PrefVelocity.msg
src/smrr_localization/: package.xml
src/smrr_multinav/: package.xml
src/smrr_utilities/: package.xml  setup.py
(+21 files in other folders)
